                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 04-08-2006 added: [ 1533282 ] IMDb Python Library. thanks to no1cantel and allthekill. now go create a bunch of fancy imdb enabled scripts! :)
 - 03-08-2006 changed: guibuilder.py, added <resolution> option tag to skin.xml file, fastMethod option, maybe others.
 - 02-08-2006 fixed: [ 1492732 ] mbcs encoding incorrectly leaves null byte at end of string.
 - 01-08-2006 fixed: Cleaned up the action code + moved the special case built in function interception for the login window to its class.
 - 01-08-2006 fixed: List and thumbcontrols cleared there page reference when cleared, meaning refreshed windows often caused jumping in the lists.
 - 01-08-2006 fixed: guibuilder.py, apparently xbmc.getLocalizedifong() isn't the same as xbmc.getLocalizedString() :)
 - 01-08-2006 added: guibuilder.py and example in GUI Builder.zip. This module allows you to skin your python scripts with a standard XBMC skinfile.xml.
 - 01-08-2006 fixed: on some dvd's, menu overlays appeared to soon, even after the last bugfix.
 - 01-08-2006 fixed: [ 1530775 ] Trainerpath dialog bug.
 - 01-08-2006 added: [ 1527477 ] Add restart video menu when auto resume video option is on. thanks to kusskowe.
 - 01-08-2006 changed: don't start kai on login screen.
 - 31-07-2006 added: [ 1440803 ] Associate Profiles with AV pack. thanks to markeen. will be documented on http://xbmc.xbox-scene.com/wiki/ soonish.
 - 31-07-2006 fixed: some minor trainer related issues.
 - 31-07-2006 fixed: master user login timestamp wasn't saved.
 - 31-07-2006 changed: autoexec.py is hidden in the script window (clutter). use the filemanager for testing.